--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.0",
+    "@mui/styled-engine-sc": "^5.8.0",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.25.0",
+    "bootstrap": "^5.1.3",
     "bpg-web-002-caps": "^1.0.0",
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
@@ -18,6 +23,7 @@
     "next": "12.0.7",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-id-swiper": "^4.0.0",
@@ -26,7 +32,7 @@
     "react-svg-wrapper": "^0.5.6",
     "react-tabs": "^3.2.3",
     "sharp": "^0.29.3",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.5",
     "swiper": "^7.3.3",
     "yup": "^0.32.11"
   },
