--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.8.0",
     "@mui/styled-engine-sc": "^5.8.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/react-html-parser": "^2.0.2",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bpg-web-002-caps": "^1.0.0",
@@ -27,6 +28,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-id-swiper": "^4.0.0",
     "react-redux": "^7.2.6",
