--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.1.3",
     "bpg-web-002-caps": "^1.0.0",
     "classnames": "^2.3.1",
+    "dayjs": "^1.11.3",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.8",
     "jwt-decode": "^3.1.2",
