--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-id-swiper": "^4.0.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^7.2.6",
     "react-slider": "^1.3.1",
     "react-svg-wrapper": "^0.5.6",
