--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "dayjs": "^1.11.3",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.8",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
     "jwt-decode": "^3.1.2",
     "next": "12.0.7",
     "next-auth": "^4.2.1",
@@ -30,6 +33,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-i18next": "^12.1.4",
     "react-icons": "^4.3.1",
     "react-id-swiper": "^4.0.0",
     "react-paginate": "^8.1.3",
