--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-slider": "^1.3.1",
     "react-svg-wrapper": "^0.5.6",
     "react-tabs": "^3.2.3",
+    "sass": "^1.59.3",
     "sharp": "^0.29.3",
     "styled-components": "^5.3.5",
     "swiper": "^7.3.3",
