--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-i18next": "^12.1.4",
     "react-icons": "^4.3.1",
     "react-id-swiper": "^4.0.0",
+    "react-messenger-chat-plugin": "^3.0.5",
     "react-paginate": "^8.1.3",
     "react-redux": "^7.2.6",
     "react-slider": "^1.3.1",
